@@ -1,6 +1,7 @@
 2017-08-29 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Multiple indeces (vector) accepted in answer() and expression() functions. Used for inserting value when multiple items is selected.
+	* Highlight matching parentheses
 
 2017-08-27 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
